--- a/index.html
+++ b/index.html
@@ -246,6 +246,9 @@
             <div class="phrase"></div>
           </li>
         </ul>
+        <div class="credits">
+          <a href="https://github.com/lselden/in.c">View on Github</a>
+        </div>
       </li>
     </ul>
     <div class="visual-canvas"><canvas></canvas></div>
